test/success/integration/_succ_expr_relge_3.hs
x :: Bool
x = 3 >= 4
main = print 567