test/fail/integration/_fail_sem_expr_relge_3.hs
x :: Bool
x = 3 >= 'c'
main = print "hello"